--- a/style.css
+++ b/style.css
@@ -56,3 +56,9 @@ header h3 {
     margin-top: 30px;
     margin-left: 130px;
 }
+.containerFlist{
+    width: 980px;
+    margin: auto;
+    background-color: rgb(58, 132, 167);
+    padding: 10px 20px 30px 40px;
+}
